JITL-240: pretty print leftovers (classes not touched by merge from 1.9)